2025-Dec-21:
- Initialize project
  - Create browser extension for forwarding browser tab events.
  - Create daemon for handling websocket server and controlling the
    application GUI.
  - Start prototype GUI SwiftUI (inside app/ dir).
  - Using Unix Domain Sockets (UDS) to communicate b/w the daemon and the GUI.
  - Using Carbon to register global keybind (Ctrl+Shift+J for now) to trigger program callback.

TODO:
- Restrict triggering of global keybind to only browser sessions.