@@ -4,10 +4,12 @@
 #include <libwebsockets.h>
 #include <pthread.h>
 #include <signal.h>
+#include <spawn.h>
 #include <stdio.h>
 #include <string.h>
 #include <sys/socket.h>
 #include <sys/un.h>
+#include <sys/wait.h>
 #include <unistd.h>
 
 // Explicitly declare these as they are sometimes missing from modern headers
@@ -125,7 +127,8 @@ static int callback_minimal(struct lws *wsi, enum lws_callback_reasons reason,
 static struct lws_protocols protocols[] = {{.name = "minimal",
                                             .callback = callback_minimal,
                                             .per_session_data_size = 0,
-                                            .rx_buffer_size = 0}};
+                                            .rx_buffer_size = 0},
+                                           LWS_PROTOCOL_LIST_TERM};
 
 void sigint_handler(int sig) {
   (void)sig;
@@ -134,30 +137,37 @@ void sigint_handler(int sig) {
 }
 
 static void init_uds_client(void) {
-  uds_fd = socket(AF_UNIX, SOCK_STREAM, 0);
-  if (uds_fd < 0) {
-    lwsl_err("Daemon: Failed to create UDS socket: %s\n", strerror(errno));
-    return;
-  }
-
+  int retries = 5;
   struct sockaddr_un addr;
   memset(&addr, 0, sizeof(addr));
   addr.sun_family = AF_UNIX;
   strncpy(addr.sun_path, uds_path, sizeof(addr.sun_path) - 1);
 
-  if (connect(uds_fd, (struct sockaddr *)&addr, sizeof(addr)) < 0) {
-    lwsl_err("Daemon: Failed to connect to App UDS at %s: %s\n", uds_path,
-             strerror(errno));
+  while (retries > 0) {
+    uds_fd = socket(AF_UNIX, SOCK_STREAM, 0);
+    if (uds_fd < 0) {
+      fprintf(stderr, "Daemon: Failed to create UDS socket: %s\n",
+              strerror(errno));
+      return;
+    }
+
+    if (connect(uds_fd, (struct sockaddr *)&addr, sizeof(addr)) == 0) {
+      printf("Daemon: Connected to App UDS at %s\n", uds_path);
+      // Send startup ping
+      const char *ping = "{\"event\":\"daemon_startup\",\"data\":\"ping\"}";
+      send(uds_fd, ping, strlen(ping), 0);
+      return;
+    }
+
     close(uds_fd);
     uds_fd = -1;
-    return;
+    fprintf(stderr, "Daemon: UDS connect failed, retrying in 1s... (%d left)\n",
+            retries - 1);
+    sleep(1);
+    retries--;
   }
-
-  lwsl_user("Daemon: Connected to App UDS at %s\n", uds_path);
-
-  // Send startup ping
-  const char *ping = "{\"event\":\"daemon_startup\",\"data\":\"ping\"}";
-  send(uds_fd, ping, strlen(ping), 0);
+  fprintf(stderr,
+          "Daemon: Failed to connect to App UDS after multiple attempts\n");
 }
 
 int main(void) {
@@ -167,19 +177,6 @@ int main(void) {
 
   signal(SIGINT, sigint_handler);
 
-  // Initialize UDS Connection to the App
-  init_uds_client();
-
-#ifdef APP_PATH
-  lwsl_user("Daemon: Known App Path: %s\n", APP_PATH);
-#endif
-
-  // Start Hotkey Thread
-  pthread_t hotkey_thread;
-  if (pthread_create(&hotkey_thread, NULL, hotkey_thread_func, NULL) != 0) {
-    lwsl_err("Daemon: Failed to start hotkey thread\n");
-  }
-
   memset(&info, 0, sizeof info);
   info.port = 9001;
   info.protocols = protocols;
@@ -187,12 +184,42 @@ int main(void) {
   info.uid = -1;
 
   lws_set_log_level(LLL_USER | LLL_ERR | LLL_WARN | LLL_NOTICE, NULL);
-  lwsl_user("Starting Daemon WebSocket server on port 9001\n");
+  lwsl_user("Starting Daemon WebSocket server on port %d\n", info.port);
 
   ctx = lws_create_context(&info);
   if (!ctx) {
     lwsl_err("lws init failed\n");
     return 1;
+  }
+
+#ifndef APP_PATH
+  fprintf(stderr, "Error: APP_PATH is not defined. Daemon cannot continue.\n");
+  return 1;
+#endif
+
+  printf("Daemon: Global App Path: %s\n", APP_PATH);
+
+  // Spawn the TabManager App
+  pid_t pid;
+  char *argv[] = {(char *)APP_PATH, NULL};
+  extern char **environ;
+  int spawn_status = posix_spawn(&pid, APP_PATH, NULL, NULL, argv, environ);
+  if (spawn_status == 0) {
+    printf("Daemon: Successfully spawned TabManager (PID: %d)\n", pid);
+    // Wait a bit for the app to initialize its UDS server
+    sleep(1);
+    init_uds_client();
+  } else {
+    fprintf(stderr, "Daemon: Failed to spawn TabManager: %s\n",
+            strerror(spawn_status));
+    // Try to connect anyway in case it's already running
+    init_uds_client();
+  }
+
+  // Start Hotkey Thread
+  pthread_t hotkey_thread;
+  if (pthread_create(&hotkey_thread, NULL, hotkey_thread_func, NULL) != 0) {
+    fprintf(stderr, "Daemon: Failed to start hotkey thread\n");
   }
 
   while (n >= 0 && !interrupted) {
